--- a/list.css
+++ b/list.css
@@ -1,3 +1,9 @@
+body {
+  width: 90%;
+  margin: auto;
+}
+
+
 #list {
   list-style: none;
   column-count: 3;
@@ -9,9 +15,22 @@
   width: 50%;
 
 }
-
+.front:hover {
+  transform: translate(-10px,-10px);
+}
 .gallery h2 {
+  font-family: 'Shadows Into Light', sans serif;
+  font-size: 2em;
   text-align: center;
   background-color: rgba(255,0,0,0.7);
-  color: white;
+
+}
+
+@media (min-width: 600px) {
+
+  .gallery h2 {
+    font-size: 4em;
+
+  }
+
 }
