--- a/list.css
+++ b/list.css
@@ -1,3 +1,6 @@
+*{
+  font-family: 'Shadows Into Light', sans serif;
+}
 body {
   width: 90%;
   margin: auto;
@@ -25,9 +28,54 @@ body {
   background-color: rgba(255,0,0,0.7);
 
 }
+.fa {
+  padding: 3%;
+  font-size: 3vw;
+  width: 8%;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 5%;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+  border-radius: 100%;
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+  border-radius: 100%;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+    border-radius: 100%;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+  border-radius: 100%;
+}
+.about{
+
+  border: 1px solid black;
+display: inline-block;
+padding: 2%;
+background-color: rgba(0,0,0,0.2);
+}
+#footer {
+  margin-top: 1%;
+  border-top: 1px solid black;
+}
 
 @media (min-width: 600px) {
-
+body {
+  width: 90%;
+}
   .gallery h2 {
     font-size: 4em;
 
