--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   font-family: 'Shadows Into Light', sans serif;
 }
 .container {
-  width: 95%;
+  width: 80%;
   margin: auto;
   display: flex;
   justify-content: space-around;
@@ -133,10 +133,13 @@ ul a:hover {
   margin-top: 1%;
   border-top: 1px solid black;
 }
-
+h3 {
+  font-size: 2vw;
+}
 @media (min-width: 600px) {
   .container{
     width: 90%;
     margin: auto;
 }
+
 }
