--- a/gallery.css
+++ b/gallery.css
@@ -1,5 +1,6 @@
 *{
   font-family: 'Shadows Into Light', sans serif;
+
 }
 body {
   width: 90%;
@@ -72,9 +73,12 @@ background-color: rgba(0,0,0,0.2);
 ul a {
   text-decoration: none;
   color: black;
+  font-size: 1.8vw;
+
 }
 ul a:hover {
   text-decoration: underline;
+  font-size: 2vw;
 }
 .social{
   width: 90%;
