--- a/styles.css
+++ b/styles.css
@@ -49,8 +49,6 @@ flex-wrap: wrap;
 }
 .pics > img {
   width:100%;
-
-  /* margin-left: 12%; */
   display: none;
 }
 .pics img:first-of-type {
@@ -70,7 +68,7 @@ flex-wrap: wrap;
 
 }
 .picDesc{
-  font-size: 2.5vw;
+  font-size: 1.5vw;
 }
 .name, .moves,.experience {
   font-size: 2.2vw;
@@ -146,6 +144,12 @@ ul a:hover {
 }
 h3 {
   font-size: 2vw;
+}
+button {
+  font-size: 2.2vw;
+}
+.btn h2 {
+  font-size: 2.5vw;
 }
 @media (min-width: 600px) {
   .container{
